...
        
        // Navigation bar
        self.navigationItem.title = Localizations.Collection.title
        if #available(iOS 11.0, *) {
            self.navigationItem.largeTitleDisplayMode = .automatic
        }
        self.navigationController?.navigationBar.accessibilityIdentifier = "collectionNavigationBar"
        
        // Set collections
        self.setCollections()
        
        // Collection view
        let layout = UICollectionViewFlowLayout()
        self.collectionNode = ASCollectionNode(collectionViewLayout: layout)
        self.collectionNode.view.alwaysBounceVertical = true
        self.collectionNode.accessibilityIdentifier = "collectionCollection"
        self.view.addSubnode(self.collectionNode)
        
        self.collectionNode.view.snp.makeConstraints { (make) in
            make.top.equalTo(self.view)
            make.bottom.equalTo(self.view)
            if #available(iOS 11.0, *) {
...
