...
import Branch
import StoreKit

class EvaluateViewController: UIViewController, ListAdapterDataSource, UIViewControllerPreviewingDelegate, DateSectionProtocol, AnalyticsPreviewDelegate {
    
    // MARK: - UI
    var newCardButton: UIBarButtonItem!
    var reorderCardsButton: UIBarButtonItem!
    var collectionNode: ASCollectionNode!
    
    // MARK: - Variable
    var date: Date = Date() {
        didSet {
...
            }
            activity.contentAttributeSet = attributes
            self.userActivity = activity
            self.userActivity?.becomeCurrent()
        }
        // navigation
        self.navigationController?.navigationBar.accessibilityIdentifier = "evaluateNavigationBar"
        self.navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: UIBarButtonItem.Style.plain, target: nil, action: nil)
        if #available(iOS 11.0, *) {
            self.navigationItem.largeTitleDisplayMode = .automatic
        }
        
        // bar buttons button
...
