...
        self.textNode.attributedText = NSAttributedString(string: Localizations.Collection.allcards, attributes: [NSAttributedString.Key.font: UIFont.preferredFont(forTextStyle: .title2), NSAttributedString.Key.foregroundColor: UIColor.textTint])
        
        self.textNode.isAccessibilityElement = false
        self.cover.isAccessibilityElement = true
        self.cover.accessibilityLabel = Localizations.Collection.allcards
        self.cover.accessibilityTraits = UIAccessibilityTraits.button
        self.cover.accessibilityIdentifier = "AllCards"
        
        self.automaticallyManagesSubnodes = true
    }
    
    // MARK: - Override
    override func layoutSpecThatFits(_ constrainedSize: ASSizeRange) -> ASLayoutSpec {
...
